--- a/public/css/app.css
+++ b/public/css/app.css
@@ -59,3 +59,22 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 .text-primary {
     color: #f16029 !important;
 }
+
+.btn-header {
+	width: auto;
+    padding: 18px 22px;
+	border-radius: 60px !important;
+    border-radius: 2px;
+    background-color: #f16029;
+    transition: transform 1s cubic-bezier(.075, .82, .165, 1),color .4s,background-color .4s;
+    color: #fff;
+	font-size: 14px;
+    line-height: 100%;
+    font-weight: 500;
+    text-align: center;
+}
+
+.btn-header:hover {
+	background-color: #c4d3f8;
+    color: #0b2051;
+}
