--- a/public/css/app.css
+++ b/public/css/app.css
@@ -27,7 +27,7 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1.2;
+	line-height: 1.4;
     font-family: "Lexend", sans-serif;
     font-weight: 400;
     font-size: 16px;
@@ -60,6 +60,10 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 	background-color: #f16029 !important;
 }
 
+.bg-blue-light {
+	background-color: #ebf4ff !important;
+}
+
 .text-primary {
     color: #f16029 !important;
 }
@@ -76,6 +80,10 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     line-height: 100%;
     font-weight: 500;
     text-align: center;
+}
+
+.text-dark {
+	color: #0b2051 !important; 
 }
 
 .btn-header:hover {
@@ -137,6 +145,13 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 }
 
 
+/* NAV */
+
+.nav-item > .nav-link {
+	font-size: 14px;
+}
+
+
 /* BANNER */
 
 .banner-img {
@@ -147,15 +162,12 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 .category-card {
 	cursor: pointer;
-	background-color: ;
+	background-color: #f8f9fa!important;
 }
 
 .category-card:hover {
-	background-color: #c4d3f8;
-    color: #0b2051;
-	transition: 1s ease;
+	color:#f16029;
+	box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+	transition: .4s ease-in-out;
 }
 
-.section {
-	margin: 40px 0 !important;
-}
