--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -176,6 +176,8 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 .category-card {
 	cursor: pointer;
 	background-color: #f8f9fa!important;
+	text-decoration: none;
+	color:#0b2051;
 }
 
 .category-card:hover {
