--- a/public/css/app.css
+++ b/public/css/app.css
@@ -182,3 +182,13 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 	transition: .4s ease-in-out;
 }
 
+
+/* PRICING */
+
+.text-sm {
+	font-size: 14px;
+}
+
+.list-item {
+	padding: 8px 0 !important;
+}
