--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -185,3 +185,14 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 	box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 	transition: .4s ease-in-out;
 }
+
+
+/* PRICING */
+
+.text-sm {
+	font-size: 14px;
+}
+
+.list-item {
+	padding: 8px 0 !important;
+}
