--- a/public/css/app.css
+++ b/public/css/app.css
@@ -192,3 +192,9 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 .list-item {
 	padding: 8px 0 !important;
 }
+
+/* PHONE INPUT */
+
+.iti { 
+	width: 100%; 
+}
