--- a/public/css/app.css
+++ b/public/css/app.css
@@ -186,7 +186,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 /* PRICING */
 
 .text-sm {
-	font-size: 14px;
+	font-size: 13px !important;
 }
 
 .list-item {
@@ -198,6 +198,10 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 .iti { 
 	width: 100%; 
 }
+
+.gradient-red {
+	background: linear-gradient(to left, #F0404C, #bb0f1a) !important;
+  }
 
 /* NAV PILLS */
 
